feat(application): Adiciona DTOs, Mappers e testes de unidade

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=9090
 spring.application.name=api
+spring.datasource.url=jdbc:postgresql://localhost:5432/osteria_brillante
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.flyway.enabled=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
